<resources>
    <string name="app_name">FileSender</string>
    <string name="hint_permission_camera">为了扫描二维码 ，需要使用到摄像头。\n请授予相机使用权限。</string>
    <string name="btn_permission">授予权限</string>
    <string name="label_custom_uri">手动连接</string>
    <string name="label_uri">地址</string>
    <string name="label_pwd">密码</string>
    <string name="label_name">账户名</string>
    <string name="label_port">端口号</string>
    <string name="ftp_default_name" translatable="false">lftp</string>
    <string name="ftp_default_pwd" translatable="false">lftp</string>
    <string name="ftp_default_port" translatable="false">2121</string>
    <string name="label_connect">连接</string>
    <string name="label_connect_list">连接列表</string>

    <string name="state_connected">已连接</string>
    <string name="state_disconnected">未连接</string>

    <string name="title_options">选项</string>
    <string name="option_connect">连接</string>
    <string name="option_disconnect">断开</string>
    <string name="option_open">打开</string>
    <string name="option_cancel">取消</string>

    <string name="title_connecting">连接中</string>
    <string name="title_disconnecting">断开中</string>
    <string name="label_ftp_file_manager">FTP文件管理</string>

    <string name="label_ftp_root">根目录</string>

    <string name="option_ftp_file_download">下载文件</string>
    <string name="option_ftp_file_hold">放入中转站</string>
    <string name="option_ftp_file_move">移动文件</string>
    <string name="option_ftp_file_copy">复制文件</string>
    <string name="option_ftp_file_delete">删除文件</string>
    <string name="option_ftp_file_create_folder">创建文件夹</string>
    <string name="option_ftp_file_rename">重命名文件</string>
    <string name="option_ftp_file_upload">上传文件</string>
    <string name="option_ftp_file_paste">粘贴文件</string>
    <string name="option_ftp_file_current_hold">当前暂存</string>
    <string name="option_ftp_file_current_flow">任务队列</string>
    <string name="execute">开始执行</string>
    <string name="hint_empty_flow">当前还没有待执行的任务</string>

    <string name="flow_item_option_hint_cache">缓存至</string>
    <string name="flow_item_option_hint_download">下载至</string>
    <string name="flow_item_option_hint_save">保存至</string>
    <string name="flow_item_option_hint_upload">上传至</string>
    <string name="flow_item_option_hint_rename">重命名为</string>
    <string name="flow_item_option_hint_delete">删除</string>
    <string name="ftp_client_not_found">请先连接到一个FTP服务器</string>
    <string name="error_uri_empty">请输入地址</string>
    <string name="error_port_empty">请输入端口号</string>
    <string name="error_port_invalid">端口号必须为整数数字</string>
    <string name="connecting">连接中</string>
    <string name="ok">好的</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_failed">连接失败</string>
    <string name="error_uri_invalid">连接地址格式错误</string>
    <string name="label_anonymous">匿名登录</string>
    <string name="retry">重试</string>

</resources>