<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FtpFileManagerActivity">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/action_bar_background"
        android:elevation="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:paddingTop="24dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:padding="12dp"
            android:src="@drawable/baseline_close_24"
            app:tint="@color/on_action_bar_background" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/on_action_bar_background" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_ftp_file_manager"
            android:textColor="@color/on_action_bar_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/optionButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/baseline_more_vert_24"
            app:tint="@color/on_action_bar_background" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/crumbsView"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/action_bar_background"
        android:elevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/actionBar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crumbsView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contentListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.button.MaterialButtonGroup
        android:id="@+id/controlBar"
        style="?attr/materialSplitButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/pasteControlButton"
            style="?attr/materialSplitButtonIconFilledStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/option_ftp_file_paste"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uploadControlButton"
            style="?attr/materialSplitButtonIconFilledStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/option_ftp_file_upload"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/holdControlButton"
            style="?attr/materialSplitButtonIconFilledStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/option_ftp_file_current_hold"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/flowControlButton"
            style="?attr/materialSplitButtonIconFilledStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/option_ftp_file_current_flow"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.button.MaterialButtonGroup>

</androidx.constraintlayout.widget.ConstraintLayout>